better traverse, perltidy, perlcritic

--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -6,7 +6,7 @@ Template::Perlish - Yet Another Templating system for Perl
 
 =head1 VERSION
 
-This document describes Template::Perlish version 1.41_02.
+This document describes Template::Perlish version 1.41_03.
 
 
 =head1 SYNOPSIS
@@ -79,15 +79,11 @@ algorithm and the variable traversal, in case you need them:
    my $array_ref = crumble("some.'-1'.'comp-lex'.path");
    # returns [ 'some', '-1', 'comp-lex', 'path' ]
 
-   my $some_ref = {};
-   my $ref_to_value = traverse(
-      data => $some_ref,
-      path => "some.0.'comp-lex'.path"
-      ref  => 1,
-   );
+   my $var;
+   my $ref_to_value = traverse(\$var, "some.0.'comp-lex'.path");
    $$ref_to_value = 42; # note double sigil for indirection
-   # now we have that $some_ref is equal to:
-   # { some => [ { 'comp-lex' => { path => 15 } } ] }
+   # now we have that $some_variable is equal to:
+   # { some => [ { 'comp-lex' => { path => 42 } } ] }
 
 
 =head1 SHOULD YOU USE THIS?
@@ -677,87 +673,82 @@ actual function used to do that.
 
 =item B<< traverse >>
 
-   my $x = traverse(%args); # OR
-   my $x = traverse(\%args);
+   my $x = traverse($data); # OR
+   my $x = traverse($data, $path);
 
 traverse an input data structure and return I<something> (depending on
-the C<%args>). Arguments can be:
+the C<$data>).
+
+The first argument C<$data> is mandatory and can be:
 
 =over
 
-=item C<data>
+=item *
 
-the input data structure to traverse. It would normally be either an
-ARRAY or a HASH reference, although it can be whatever actually (but you
-will be able to actually I<traverse> only arrays or hashes, so you'd
-better provide an empty path if you set C<data> to anything else);
+I<a HASH or ARRAY reference>, in which case a normal traversal will take
+place, and missing keys/indexes will stop the traversal;
 
-=item C<path>
+=item *
 
-the path to follow inside C<data>. It can be either a plain string that
-will be split using L</crumble>, or an array reference containing the
-different I<crumbs> to follow;
+I<a reference to a SCALAR or to another REF>, in which case
+auto-vivification in traversal will be enabled (see below for details);
 
-=item C<ref>
+=item *
 
-=item C<reference_to_value>
-
-boolean value to request whether a value or a reference to a value are
-needed in output. C<ref> and C<ref_to_value> are synonyms, with the
-former taking precendence on the latter if both are present.
+I<anything else>, in which case it's better to either avoid C<$path> or
+to provide an empty one to get it back, or it is likely to give an error
+(because you can't traverse it actually).
 
 =back
 
-Depending on C<ref>, you will get either a value back (if it is false)
-or a reference to it (if it is true). This parameter also changes how
-the traversal is done in case of missing parts.
+When provided, C<$path> is the path to follow inside C<data>. It can be
+either a plain string that will be split using L</crumble>, or an array
+reference containing the different I<crumbs> to follow. When missing, it
+is the same as providing the empty path (i.e. an empty string or a
+reference to an empty array).
 
-In particular, you will want to set C<ref> to a false value if you want
-to just I<read> from C<data>. In this case, the first missing crumb will
-make the function return immediately an empty string value; moreover, if
-all crumbs are successfully found, the value will be returned. This is
-what is actually used by the functions described in
+Depending on what is held in C<$data>, you will get either a value back
+(if auto-vivification is NOT active) or a reference to it (if it is
+active). This also changes how the traversal is done in case of missing
+parts.
+
+In particular, you will want to pass a reference to a hash or array if
+you want to just I<read> from C<data>. In this case, the first missing
+crumb will make the function return immediately an empty string value;
+moreover, if all crumbs are successfully found, the value will be
+returned. This is what is actually used by the functions described in
 L</Variables Accessors>.
 
-If you set C<ref> to a true value instead, you will get back a reference
-to a value. In this case, any missing parts will trigger
-auto-vivification of the data structure, i.e. the missing parts will be
-created automatically for you. This comes handy when you want to
-I<write> into the data structure, like in the following example:
+If you pass a reference to a scalar or to another reference instead, you
+will get back a reference to a value. In this case, any missing parts
+will trigger auto-vivification of the data structure, i.e. the missing
+parts will be created automatically for you. This comes handy when you
+want to I<write> into the data structure, like in the following example:
 
-   my $empty_data = {};
-   my $ref_to_value = traverse(
-      data => $empty_data,
-      path => "some.0.'comp-lex'.path"
-      ref  => 1,
-   );
+   my $empty_data;
+   my $ref_to_value = traverse(\$empty_data, "some.0.'comp-lex'.path");
    $$ref_to_value = 42; # note double sigil for indirection
    # now we have that $empty_data is equal to:
-   # { some => [ { 'comp-lex' => { path => 15 } } ] }
+   # { some => [ { 'comp-lex' => { path => 42 } } ] }
 
-You can e.g. want to use this approach if you want to provide a
-consistent way to set variables and expand them into templates:
+You can e.g. want to use this approach to provide a consistent way to
+set variables and expand them into templates:
 
-   my $vars = {};
-   ${traverse(data => $vars, path => 'one.two.3')} = 42;
+   my $vars;
+   ${traverse(\$vars, 'one.two.3')} = 42;
    my $text = render('Answer is as simple as [% one.two.3 %]', $vars);
 
 Of course variable values might come from the command line or some other
 source in the real world!
 
-When something goes wrong in the traversal, an empty string will be
-returned in case C<ref> is false, otherwise C<undef> will be returned.
+When something goes wrong in the traversal, C<undef> is returned if
+auto-vivification is enabled, an empty string is returned otherwise.
 
-If C<path> is not provided, or set to the empty string, C<data> or a
-reference to it is returned (depending on C<ref>, see below). This is
-the only real case in which C<data> can actually be set to whatever you
-want, otherwise you should stick to either hash or array references.
-
-C<path> components can be plain scalars or references themselves. When
-they are plain scalars, they will be used directly to access C<data> or
-its descendants; otherwise, C<traverse> will enforce that the current
-descendant in C<data> is a reference of the same type as the specific
-crumb. Consider this example:
+If C<$path> is a reference to an array, its components can be plain
+scalars or references themselves. When they are plain scalars, they are
+used directly to access C<data> or its descendants; otherwise,
+C<traverse> enforces that the current descendant in C<data> is a
+reference of the same type as the specific crumb. Consider this example:
 
    my $data = { one => { two => [ qw< ciao a tutti quanti > ] } }
    my $path1 = [ qw< one two 3 > ];           # good
@@ -786,17 +777,16 @@ either the (only) element of an array reference (as in C<[3]> that
 becomes C<3>), or the (only) key of a hash reference (as in
 C<< { two => 1 } >> that becomes C<two>).
 
-As already mentioned, auto-vivification kicks in if C<ref> is true. In
-this case, a reference in the C<path> will also force a specific
-auto-vivification type, i.e. the automatic creation of either an array
-or a hash reference. If the crumb in C<path> is not a reference, a guess
-is taken in that non-negative integers are considered indexes of an
-array, otherwise a hash is assumed. So, let's take C<$path4> again, and
-let's see what happens when C<ref> is true:
+When auto-vivification is active, a reference in the C<path> will also
+force a specific auto-vivification type, i.e. the automatic creation of
+either an array or a hash reference. If the crumb in C<path> is not a
+reference, a guess is taken in that non-negative integers are considered
+indexes of an array, otherwise a hash is assumed. So, let's take
+C<$path4> again, and let's see what happens when C<ref> is true:
 
    my $path4 = [ qw< one two >, { 3 => 1 } ];
-   my $data = {}; # start with an empty hash
-   ${traverse(data => $data, path => $path4)} = 42;
+   my $data = {}; # start e.g. with an empty hash
+   ${traverse(\$data, $path4)} = 42;
 
 will auto-vivify C<$data> completely and leave it as follows:
 
