--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
    - clarification on relationship between V and traverse
+   - added STDOUT usage avoidance and P function
 
 1.50  2016-01-04 01:12:31 CET
    - release after 373 passes on CPAN Testers (thanks!)
